--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -12,19 +12,19 @@ excerpt: "1.Integration of an end-to-end e-commerce mall enabling buy and refund
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
-    <img src="img1.jpg" style="width:100%">
+    <img src="internproject1.jpg" style="width:100%">
     <div class="text">Caption Text</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
-    <img src="img2.jpg" style="width:100%">
+    <img src="e_commerce_mall_page.jpg" style="width:100%">
     <div class="text">Caption Two</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
-    <img src="img3.jpg" style="width:100%">
+    <img src="cartrip.jpg" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
 
