--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -11,3 +11,6 @@ excerpt: "1.Integration of an end-to-end e-commerce mall enabling buy and refund
 This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
 
 
+<img src='/images/intern_project_ant_fin/internproject1.jpg' width='216' height='468'>
+<img src='/images/intern_project_ant_fin/e_commerce_mall_page.jpg' width='216' height='468'>
+<img src='/images/intern_project_ant_fin/cartrip.jpg' width='216' height='468'>
