--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -14,6 +14,8 @@ This is an item in your portfolio. It can be have images or nice text. If you na
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="../assets/css/slideshow.css">
+  <script src="../assets/css/slideshow.js"></script>
 </head>
 <body>
 
