--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -10,49 +10,46 @@ excerpt: "1.Integration of an end-to-end e-commerce mall enabling buy and refund
 
 This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
 
-
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" href="../assets/css/slideshow.css">
-  <script src="../assets/css/slideshow.js"></script>
-</head>
+<title>W3.CSS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+.mySlides {display:none;}
+</style>
 <body>
 
-<!-- Slideshow container -->
-<div class="slideshow-container">
+<h2 class="w3-center">Manual Slideshow</h2>
 
-  <!-- Full-width images with number and caption text -->
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
-    <img src='/images/intern_project_ant_fin/internproject1.jpg' width='216' height='468'>
-    <div class="text">Caption Text</div>
-  </div>
+<div class="w3-content w3-display-container">
+  <img class="mySlides" src="/images/intern_project_ant_fin/internproject1.jpg" style="width:100%">
+  <img class="mySlides" src="/images/intern_project_ant_fin/e_commerce_mall_page.jpg" style="width:100%">
+  <img class="mySlides" src="/images/intern_project_ant_fin/cartrip.jpg" style="width:100%">
 
-  <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
-    <img src='/images/intern_project_ant_fin/e_commerce_mall_page.jpg' width='216' height='468'>
-    <div class="text">Caption Two</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
-    <img src='/images/intern_project_ant_fin/cartrip.jpg' width='216' height='468'>
-    <div class="text">Caption Three</div>
-  </div>
-
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+  <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
 </div>
-<br>
 
-<!-- The dots/circles -->
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-</div>
+<script>
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  if (n > x.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+  x[slideIndex-1].style.display = "block";  
+}
+</script>
 
 </body>
 </html>
