--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -2,9 +2,49 @@
 title: "Intern projects at Ant Financial"
 excerpt: "1.Integration of an end-to-end e-commerce mall enabling buy and refund with reward points<br/>
 2.A platform-wised achievement system that supports services on marketing pages<br/>
-<img src='/images/intern_project_ant_fin/internproject1.jpg' width='216' height='468'>
-<img src='/images/intern_project_ant_fin/e_commerce_mall_page.jpg' width='216' height='468'>
-<img src='/images/intern_project_ant_fin/cartrip.jpg' width='216' height='468'>
+<!DOCTYPE html>
+<html>
+<title>W3.CSS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+.mySlides {display:none;}
+</style>
+<body>
+
+<h2 class="w3-center">Manual Slideshow</h2>
+
+<div class="w3-content w3-display-container">
+  <img class="mySlides" src="/images/intern_project_ant_fin/internproject1.jpg" style="width='216' height='468'">
+  <img class="mySlides" src="/images/intern_project_ant_fin/e_commerce_mall_page.jpg" style="width='216' height='468'">
+  <img class="mySlides" src="/images/intern_project_ant_fin/cartrip.jpg" style="width='216' height='468'">
+
+  <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+  <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+</div>
+
+<script>
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  if (n > x.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+  x[slideIndex-1].style.display = "block";  
+}
+</script>
+
+</body>
+</html>
 <br/>Download [Alipay](https://render.alipay.com/p/s/download?form=chinese) mobile app to view these pages"
 ---
 
@@ -23,9 +63,9 @@ This is an item in your portfolio. It can be have images or nice text. If you na
 <h2 class="w3-center">Manual Slideshow</h2>
 
 <div class="w3-content w3-display-container">
-  <img class="mySlides" src="/images/intern_project_ant_fin/internproject1.jpg" style="width:100%">
-  <img class="mySlides" src="/images/intern_project_ant_fin/e_commerce_mall_page.jpg" style="width:100%">
-  <img class="mySlides" src="/images/intern_project_ant_fin/cartrip.jpg" style="width:100%">
+  <img class="mySlides" src="/images/intern_project_ant_fin/internproject1.jpg" style="width='216' height='468'">
+  <img class="mySlides" src="/images/intern_project_ant_fin/e_commerce_mall_page.jpg" style="width='216' height='468'">
+  <img class="mySlides" src="/images/intern_project_ant_fin/cartrip.jpg" style="width='216' height='468'">
 
   <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
