--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -15,9 +15,9 @@ excerpt: "1.Integration of an end-to-end e-commerce mall enabling buy and refund
 <h2 class="w3-center">Manual Slideshow</h2>
 
 <div class="w3-content w3-display-container">
-  <img class="mySlides" src="/images/intern_project_ant_fin/internproject1.jpg" style="width='216' height='468'">
-  <img class="mySlides" src="/images/intern_project_ant_fin/e_commerce_mall_page.jpg" style="width='216' height='468'">
-  <img class="mySlides" src="/images/intern_project_ant_fin/cartrip.jpg" style="width='216' height='468'">
+  <img class="mySlides" src="/images/intern_project_ant_fin/internproject1.jpg" style="width:20% height:20%">
+  <img class="mySlides" src="/images/intern_project_ant_fin/e_commerce_mall_page.jpg" style="width:20% height:20%">
+  <img class="mySlides" src="/images/intern_project_ant_fin/cartrip.jpg" style="width:20% height:20%">
 
   <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
