--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -19,10 +19,10 @@ This is an item in your portfolio. It can be have images or nice text. If you na
 
 <h2 class="w3-center">Manual Slideshow</h2>
 
-<div class="w3-content w3-display-container">
-  <img class="mySlides" src="/images/intern_project_ant_fin/internproject1.jpg" width="216" height="468p">
-  <img class="mySlides" src="/images/intern_project_ant_fin/e_commerce_mall_page.jpg" width="216" height="468p">
-  <img class="mySlides" src="/images/intern_project_ant_fin/cartrip.jpg" width="216" height="468p">
+<div class="w3-content w3-display-container" width="216" height="468">
+  <img class="mySlides" src="/images/intern_project_ant_fin/internproject1.jpg" width="216" height="468">
+  <img class="mySlides" src="/images/intern_project_ant_fin/e_commerce_mall_page.jpg" width="216" height="468">
+  <img class="mySlides" src="/images/intern_project_ant_fin/cartrip.jpg" width="216" height="468">
 
   <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
