--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -2,6 +2,16 @@
 title: "Intern projects at Ant Financial"
 excerpt: "1.Integration of an end-to-end e-commerce mall enabling buy and refund with reward points<br/>
 2.A platform-wised achievement system that supports services on marketing pages<br/>
+<h2 class="w3-center">Manual Slideshow</h2>
+
+<div class="w3-content w3-display-container" style="height: 468px; width: 216px">
+  <img class="mySlides" src="/images/intern_project_ant_fin/internproject1.jpg" width="216" height="468">
+  <img class="mySlides" src="/images/intern_project_ant_fin/e_commerce_mall_page.jpg" width="216" height="468">
+  <img class="mySlides" src="/images/intern_project_ant_fin/cartrip.jpg" width="216" height="468">
+
+  <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+  <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+</div>
 <br/>Download [Alipay](https://render.alipay.com/p/s/download?form=chinese) mobile app to view these pages"
 ---
 
