--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -2,6 +2,7 @@
 title: "Intern projects at Ant Financial"
 excerpt: "1.Integration of an end-to-end e-commerce mall enabling buy and refund with reward points<br/>
 2.A platform-wised achievement system that supports services on marketing pages<br/>
+<img class="mySlides" src="/images/intern_project_ant_fin/internproject1.jpg" width="216" height="468">
 <br/>Download [Alipay](https://render.alipay.com/p/s/download?form=chinese) mobile app to view these pages"
 ---
 
@@ -16,8 +17,6 @@ This is an item in your portfolio. It can be have images or nice text. If you na
 .mySlides {display:none;}
 </style>
 <body>
-
-<h2 class="w3-center">Manual Slideshow</h2>
 
 <div class="w3-content w3-display-container" style="height: 468px; width: 216px">
   <img class="mySlides" src="/images/intern_project_ant_fin/internproject1.jpg" width="216" height="468">
