--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -2,7 +2,7 @@
 title: "Intern projects at Ant Financial"
 excerpt: "1.Integration of an end-to-end e-commerce mall enabling buy and refund with reward points<br/>
 2.A platform-wised achievement system that supports services on marketing pages<br/>
-<p align="center"><img src='/images/intern_project_ant_fin/internproject1.jpg' width='216' height='468'></p>
+<div><img src='/images/intern_project_ant_fin/internproject1.jpg' width='216' height='468'></div>
 <br/>Download [Alipay](https://render.alipay.com/p/s/download?form=chinese) mobile app to view these pages"
 ---
 
