--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -1,7 +1,7 @@
 ---
 title: "Intern projects at Ant Financial"
-excerpt: "- Integration of an end-to-end e-commerce mall enabling buy and refund with reward points.<br/>
-- A platform-wised achievement system that supports services on marketing pages.<br/>
+excerpt: "Integration of an end-to-end e-commerce mall enabling buy and refund with reward points.<br/>
+A platform-wised achievement system that supports services on marketing pages.<br/>
 <img src='/images/intern_project_ant_fin/internproject1.jpg' width='216' height='468'>
 <br/>Download [Alipay](https://render.alipay.com/p/s/download?form=chinese) mobile app to view these pages"
 ---
