--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -2,7 +2,7 @@
 title: "Intern projects at Ant Financial"
 excerpt: "i.  Integration of an end-to-end e-commerce mall enabling buy and refund with reward points.<br/>
 ii. A platform-wised achievement system that supports services on marketing pages.<br/>
-<img src='/images/intern_project_ant_fin/internproject1.jpg' width='216' height='468'>
+<img src='/images/Ant_logo.jpg' width='405' height='223'>
 <br/>Download [Alipay](https://render.alipay.com/p/s/download?form=chinese) mobile app to view these pages"
 ---
 
