--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,6 @@
 ---
-title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+title: "Project Synchrono@SBEL"
+excerpt: "Synchrono is a framework in which dynamic multi-agent simulations can be conducted to understand agent interplay and develop control algorithms in a safe and flexible environment.Synchrono enables multiple agents/vehicles to operate within the same virtual environment, and interact with each other through sensing and communication protocols.<br/><img src='/images/synchrono_side.png' width='384' height='216'>"
 collection: portfolio
 ---
 
