--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,10 @@
 ---
 title: "Project Synchrono@SBEL"
-excerpt: "Synchrono is a framework in which dynamic multi-agent simulations can be conducted to understand agent interplay and develop control algorithms in a safe and flexible environment.Synchrono enables multiple agents/vehicles to operate within the same virtual environment, and interact with each other through sensing and communication protocols.<br/><br/><img src='/images/synchrono_side.png' width='384' height='216'>"
+excerpt: "Synchrono is a framework in which dynamic multi-agent simulations can be conducted to understand agent 
+interplay and develop control algorithms in a safe and flexible environment.Synchrono enables multiple agents/vehicles 
+to operate within the same virtual environment, and interact with each other through sensing and communication protocols.
+<br/><br/><img src='/images/synchrono_side.png' width='384' height='216'>
+<br/>[Link](https://sbel.wisc.edu/2018/06/03/synchrono-a-multi-agent-simulation-framework-for-robotics-and-autonomous-vehicle-applications/) to project page on SBEL websit"
 collection: portfolio
 ---
 
