--- a/_portfolio/portfolio-3.html
+++ b/_portfolio/portfolio-3.html
@@ -1,7 +1,8 @@
 ---
 title: "Diary Brain"
 excerpt: "A project demonstrate the value in facilitating the exchange of data, by using a collaborative and open environment to link data from dairy operation
-s with analytical and other value-added services.<br/><br/><img src='/images/dairy_brain.png' width='512' height='288'></br>[Link](https://dairybrain.wisc.edu/) to project page from University of Wisconsin-Madison"
+s with analytical and other value-added services.<br/><br/><img src='/images/dairy_brain.png' width='512' height='288'><br/>[Link](https://dairybrain.wisc.edu/) to project page from University of Wisconsin-Madison
+* * *"
 collection: portfolio
 ---
 
