--- a/_portfolio/P0-intern-project-at-AntFin.html
+++ b/_portfolio/P0-intern-project-at-AntFin.html
@@ -1,13 +1,10 @@
 ---
-title: "Intern projects at Ant Financial"
-excerpt: "i.  Integration of an end-to-end e-commerce mall enabling buy and refund with reward points.<br/>
-ii. A platform-wised achievement system that supports services on marketing pages.<br/>
+title: "Intern Projects@Ant Financial"
+excerpt: "a. Integration of an end-to-end e-commerce mall enabling buy and refund with reward points.<br/>
+b. A platform-wised achievement system that supports services on marketing pages.<br/>
 <img src='/images/Ant_logo.jpg' width='405' height='223'>
 <br/>Download [Alipay](https://render.alipay.com/p/s/download?form=chinese) mobile app to view these pages"
 ---
-
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
-
 <!DOCTYPE html>
 <html>
 <title>W3.CSS</title>
@@ -17,6 +14,9 @@ This is an item in your portfolio. It can be have images or nice text. If you na
 .mySlides {display:none;}
 </style>
 <body>
+<h1>
+  Project Background
+</h1>
 
 <div class="w3-content w3-display-container" style="height: 468px; width: 216px">
   <img class="mySlides" src="/images/intern_project_ant_fin/internproject1.jpg" width="216" height="468">
