--- a/_portfolio/P0-intern-project-at-AntFin.html
+++ b/_portfolio/P0-intern-project-at-AntFin.html
@@ -43,7 +43,7 @@ b. A platform-wised achievement system that supports services on marketing pages
     <li>
       Implemented APIs, by Java under a Spring-Cloud-like frame, SOFA, to enable buying and refunding with rewards points in the e-commerce mall, bringing an increase in PV of marketing front page by 15% and an average GMV of $4,3000.      </li>
     <li>
-      Visuals of the pages of the mall:<br>
+      Visuals of the pages of the mall:<br><br>
       <div class="w3-content w3-display-container" style="height: 468px; width: 216px">
         <img class="mySlides" src="/images/intern_project_ant_fin/e_commerce_mall_page.jpg" width="216" height="468">
         <img class="mySlides" src="/images/intern_project_ant_fin/mall0.jpg" width="216" height="468">
@@ -74,7 +74,8 @@ b. A platform-wised achievement system that supports services on marketing pages
   </ul>
   
 </p>
-
+Check out these pages on [Alipay](https://render.alipay.com/p/s/download?form=chinese) mobile app!
+</p>
 
 <script>
 var slideIndex = 1;
