--- a/_portfolio/P0-intern-project-at-AntFin.html
+++ b/_portfolio/P0-intern-project-at-AntFin.html
@@ -74,7 +74,7 @@ b. A platform-wised achievement system that supports services on marketing pages
   </ul>
   
 </p>
-Check out these pages on [Alipay](https://render.alipay.com/p/s/download?form=chinese) mobile app!
+Check out these pages on <a href="https://render.alipay.com/p/s/download?form=chinese">Alipay</a> mobile app!
 </p>
 
 <script>
