--- a/_portfolio/P0-intern-project-at-AntFin.html
+++ b/_portfolio/P0-intern-project-at-AntFin.html
@@ -20,7 +20,7 @@ b. A platform-wised achievement system that supports services on marketing pages
 <P>
   <ul>
     <li>Increase daily active users.</li>
-    <li>Add new ways of rewarding points consumption</li>
+    <li>Add new ways of rewarding points consumption.</li>
   </ul>
 </P>
 <hr/>
